rescirpt digital twin is live!

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     <div id="root"></div>
     
     <!-- ReScript compiled JavaScript -->
-    <script src="./lib/es6/src/Index.bs.js"></script>
+    <script src="./src/Index.bs.js"></script>
     
     <script>
         // Initialize MathJax for LaTeX rendering
