converting to mathematical formula for complete refactor

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     <div id="root"></div>
     
     <!-- ReScript compiled JavaScript -->
-    <script src="./src/Index.bs.js"></script>
+    <script type="module" src="./src/Index.bs.js"></script>
     
     <script>
         // Initialize MathJax for LaTeX rendering
