--- a/demo.html
+++ b/demo.html
@@ -258,7 +258,7 @@
     </div>
 
     <!-- Load the ReScript compiled application -->
-    <script src="./src/Index.bs.js"></script>
+    <script type="module" src="./src/Index.bs.js"></script>
     <!-- Load test runtime script -->
     <script src="./test_runtime.js"></script>
     
